--- a/signup.html
+++ b/signup.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html ng-app="app">
 
-  <head>
-    <script data-require="angular.js@*" data-semver="1.3.5" src="https://code.angularjs.org/1.3.5/angular.js"></script>
-    <script data-require="angular-route@*" data-semver="1.3.5" src="https://code.angularjs.org/1.3.5/angular-route.js"></script>
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<head>
+
+  <script data-require="angular.js@*" data-semver="1.3.5" src="https://code.angularjs.org/1.3.5/angular.js">
+  </script>
+  <script data-require="angular-route@*" data-semver="1.3.5" src="https://code.angularjs.org/1.3.5/angular-route.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/controller/SignupController.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/controller/SignupController.js"></script>
 
-
-
-
-  </head>
+</head>
 
   <body>
 
     <div ng-controller="signupCtrl">
 
-
-
-        <div >
-            <form ng-submit="post()">
+      <div >
+          <form ng-submit="post()">
               <div>
                 <input type="text" ng-model='username' placeholder='username'>
               </div>
@@ -39,11 +36,12 @@
                 <option value="client">Customer
                 </option>
               </select>  
-              </div>
+
               <div>
                 <input type='submit' value="Signup">
               </div>
-            </form>
+
+          </form>
         </div>
         
 
